    as it has been removed from linux-libc-dev.
  * patch/arm/cvs-ioperm.diff: don't include asm/page.h as it has been removed
    from linux-libc-dev.  Closes: #480892.
  * patches/hppa/cvs-atomic.diff: don't remove "memory" asm constraint. Fixes
    FTBFS on hppa.
  * Update Swedish debconf translation, by Martin Bagge.  Closes: #482467.

  [ Clint Adams ]
  * Add any/cvs-regex_anchor.diff to fix performance anomaly with ^$.
    closes: #475474.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-termios.diff: update patch, fixes compilation of jove.
  * patches/hurd-i386/local-pthread-unsupported-stubs.diff: new patch to
    declare the unsupported function stubs, fixes compilation of pike.  Also
    bump the dependency on hurd-dev to get <gnu/stubs-pthread.h>.
  * patches/hurd-i386/local-unlockpt-chroot.diff: new patch to fix ptys in
    chroots.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 31 May 2008 09:48:22 +0200

glibc (2.7-11) unstable; urgency=low

  [ Aurelien Jarno ]
  * Reenable testsuite on MIPS SB1 platforms.
  * mips/cvs-memory-barriers.diff: new patch from CVS to fix test_and_set.
  * mips/cvs-fcsr.diff: new patch from CVS to fix floating point control
    register accesses.
  * local/manpages/ld.so.8: fix libraries search order.  Closes: #473458.
  * Update Finish debconf translation, by Esko Arajärvi.  Closes: #473802.
  * Replace patches/mips/submitted-mipsn32.diff by the version merged
    upstream.
  * patches/hppa/cvs-atomic.diff: new patch from upstream to fix atomic
    locks witch gcc-4.3.
  * patches/any/cvs-rfc3484.diff: update tests from CVS.  Closes: #474226.
  * patches/localedata/locale-shs_CA.diff: add Secwepemctsín from CVS.
  * debhelper.in/libc-prof.README.Debian: new file to explain how to use
    libc-prof.  Closes: #442858.
  * patches/any/cvs-ethertype.diff: new patch to add new ETHERTYPE_*
    definitions.  Closes: #474171.
  * sysdeps/depflags.pl: conflicts with tzdata-etch.