@@ -8,6 +8,9 @@ glibc (2.7-12) UNRELEASED; urgency=low
   * patches/hppa/cvs-atomic.diff: don't remove "memory" asm constraint. Fixes
     FTBFS on hppa.
   * Update Swedish debconf translation, by Martin Bagge.  Closes: #482467.
+  * sysdeps/amd64.mk, sysdeps/i386.mk, control.in/main: bump g++-4.3 build-depends
+    to (>= 4.3.0-2) to make sure the cld fix is applied. Use gcc-4.3 on amd64
+    and i386.
 
   [ Clint Adams ]
   * Add any/cvs-regex_anchor.diff to fix performance anomaly with ^$.
@@ -21,7 +24,7 @@ glibc (2.7-12) UNRELEASED; urgency=low
   * patches/hurd-i386/local-unlockpt-chroot.diff: new patch to fix ptys in
     chroots.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 31 May 2008 09:48:22 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 31 May 2008 10:10:13 +0200
 
 glibc (2.7-11) unstable; urgency=low
 
